I forgot to close out

--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,13 @@
             type="text"> <label class="label" for="phone">PHONE</label>
             <input id="phone" name="phone" size="36" type="text">
           </div>
+                <div>
+            <label class="label" for="twitter">twitter</label> <input id="twitter" name=
+            "twitter" size="36" type="text"> <label class="label" for=
+            "email">E-MAIL</label> <input id="email" name="email" size="36"
+            type="text"> <label class="label" for="phone">PHONE</label>
+            <input id="phone" name="phone" size="36" type="text">
+          </div>
 
           <div>
             <label class="label" for="socialMedia">FOLLOW YOU ON...</label>
