--- a/app/index.html
+++ b/app/index.html
@@ -1,46 +1,45 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <title>
-        Contacts
-    </title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <link href="css/vendor/normalize.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
+<title>Contacts</title>
+<meta content="width=device-width, initial-scale=1.0" name="viewport">
+<link href="css/vendor/normalize.css" rel="stylesheet">
+<link href="css/main.css" rel="stylesheet">
 </head>
-
 <body>
-    <div class="container">
-        <h1>CONTACTS</h1>
-        <form id="Contact" name="Contact">
-            <fieldset>
-                <div>
-                    <label class="label" for="name">NAME</label>
-                    <input id="name" name="name" size="36" type="text">
-                    <label class="label" for="email">E-MAIL</label>
-                    <input id="email" name="email" size="36" type="text">
-                    <label class="label" for="phone">PHONE</label>
-                    <input id="phone" name="phone" size="36" type="text">
-                    <label class="label" for="twitter">TWITTER</label>
-                    <input id="twitter" name="twitter" size="36" type="text">
-                    <label class="label" for="linkedin">LINKED IN</label>
-                    <input id="linkedin" name="linkedin" size="36" type="text">
-                </div>
-            </fieldset>
-        </form>
-    </div>
-    <!-- VENDOR -->
-    <script src="js/vendor/jquery.js"></script>
-    <script src="js/vendor/underscore.js"></script>
-    <script src="js/vendor/backbone.js"></script>
-    <script src="js/vendor/handlebars.js"></script>
-    <!-- TEMPLATES -->
-    <script src="js/templates.js"></script>
-    <!-- MAIN -->
-    <script src="js/models/contact.model.js"></script>
-    <script src="js/collections/contact.collections.js"></script>
-    <script src="js/main.js"></script>
-</body>
+<div class="container">
+<h1>CONTACTS</h1>
 
+<form id="Contact" name="Contact">
+<fieldset>
+
+<div>
+<input id="" placeholder="NAME" size="36" type="text" value="">
+<input id="" placeholder="E-MAIL" size="36" type="text" value="">
+<input id="" placeholder="PHONE" size="36" type="text" value="">
+<input id="" placeholder="TWITTER" size="36" type="text" value="">
+<input id="" placeholder="LINKEDIN" size="36" type="text" value="">
+</div>
+<button>SUBMIT</button>
+</fieldset>
+
+</form>
+</div>
+
+<!-- VENDOR -->
+<script src="js/vendor/jquery.js"></script>
+<script src="js/vendor/underscore.js"></script>
+<script src="js/vendor/backbone.js"></script>
+<script src="js/vendor/handlebars.js"></script>
+
+<!-- TEMPLATES -->
+ <script src="js/templates.js"></script>
+
+ <!-- MAIN -->
+ <script src="js/models/contact.model.js"></script>
+ <script src="js/collections/contact.collections.js"></script>
+ <script src="js/main.js"></script>
+
+
+</body>
 </html>
