NO ERRORS BUT NOTHING POSTING TO URL

--- a/app/index.html
+++ b/app/index.html
@@ -4,26 +4,28 @@
 <title>Contacts</title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <link href="css/vendor/normalize.css" rel="stylesheet">
+<!-- GOOGLE FONTS -->
+<link href="http://fonts.googleapis.com/css?family=Teko:300,400|Roboto+Mono:400,300|Gruppo" rel="stylesheet'">
 <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
 <div class="container">
-<h1>CONTACTS</h1>
+  <h1>
+    CONTACTS
+  </h1>
 
-<form id="Contact" name="Contact">
-<fieldset>
-
-<div>
-<input id="" placeholder="NAME" size="36" type="text" value="">
-<input id="" placeholder="E-MAIL" size="36" type="text" value="">
-<input id="" placeholder="PHONE" size="36" type="text" value="">
-<input id="" placeholder="TWITTER" size="36" type="text" value="">
-<input id="" placeholder="LINKEDIN" size="36" type="text" value="">
-</div>
-<button>SUBMIT</button>
-</fieldset>
-
-</form>
+  <form id="addContacts" name="addContacts">
+    <fieldset>
+      <div>
+        <input id="Name" placeholder="NAME" size="30" type="text" value="">
+        <input id="E-mail" placeholder="E-MAIL" size="30" type="text" value="">
+        <input id="Phone" placeholder="PHONE" size="30" type="text" value="">
+        <input id="Twitter" placeholder="TWITTER" size="30" type="text" value="">
+        <input id="LinkedIn" placeholder="LINKEDIN" size="30" type="text" value="">
+      </div>
+      <button>SUBMIT</button>
+    </fieldset>
+  </form>
 </div>
 
 <!-- VENDOR -->
